# RICE-8

./: .gitignore  CMakeLists.txt
source/: main.cpp  mainbak.cp1p  theming.h
source/Cartridge/: Cartridge.cpp  Cartridge.h
source/Cartridge/Lua/: Functions.cpp  Functions.h  Script.cpp  Script.h
source/cartridge/: cart.cpp  cart.h
source/cartridge/lua/: funcs.cpp  funcs.h  script.cpp
source/cartridge/sprite/: sprite.cpp  sprite.h  sprites.h
source/gui/: pixeleditor.cpp  pixeleditor.h
